Optimize header component to reduce re-renders on scroll
Implement debounced scroll handling in the header component

- Introduce a custom hook `useDebouncedScroll` to manage scroll events with a debounce mechanism, reducing the frequency of event handling and state updates.
- Refactor the scroll event logic to use this hook, which now decides the visibility of the header based on scroll direction and position.
- Remove direct event handling in the component, and instead pass a callback to `useDebouncedScroll` that updates the `hiddenHeader` state based on the scroll direction.
- Set a debounce delay of 100 milliseconds to balance responsiveness and performance.

This change minimizes unnecessary re-renders triggered by frequent scroll events, enhancing UI performance and user experience.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@ body {
 }
 
 a {
-  @apply text-primary hover:text-secondary;
+  @apply text-secondary hover:text-primary;
 }
 
 h1,
@@ -27,10 +27,6 @@ h6 {
 p {
   @apply font-sans;
   font-family: 'Open Sans', sans-serif;
-}
-
-.hidden-header {
-  transform: translateY(-100%);
 }
 
 #hero {
@@ -52,9 +48,4 @@ p {
 #hero .decorative-lines::after {
   left: calc(50% + 100px);
   transform: translateX(-50%);
-}
-
-
-#open-menu-icon.open {
-  transform: rotate(90deg);
 }
