--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,15 +3,11 @@
 @tailwind utilities;
 
 body {
-  @apply font-sans transition-colors duration-300;
-}
-
-body {
-  @apply bg-background text-text;
+  @apply font-sans transition-colors duration-300 bg-gray-800 text-text;
 }
 
 a {
-  @apply text-secondary hover:text-primary;
+  @apply text-primary hover:text-secondary;
 }
 
 h1,
@@ -48,4 +44,61 @@ p {
 #hero .decorative-lines::after {
   left: calc(50% + 100px);
   transform: translateX(-50%);
+}
+
+@keyframes blink {
+  0%, 100% {
+      opacity: 1;
+  }
+  50% {
+      opacity: 0.5;
+  }
+}
+
+.typing-indicator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  margin: 10px;
+}
+
+.typing-indicator div {
+  width: 8px;
+  height: 8px;
+  margin: 0 3px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  animation: blink 1s linear infinite;
+}
+
+.typing-indicator div:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.typing-indicator div:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+.mini-scrollbar::-webkit-scrollbar {
+  width: .3rem;
+  border-radius: .25rem;
+}
+.mini-scrollbar-x::-webkit-scrollbar {
+  height: .3rem;
+  border-radius: .25rem;
+}
+
+.mini-scrollbar::-webkit-scrollbar-track, .mini-scrollbar-x::-webkit-scrollbar-track {
+  @apply bg-gray-800;
+  margin: 5px 0;
+}
+
+.mini-scrollbar::-webkit-scrollbar-thumb, .mini-scrollbar-x::-webkit-scrollbar-thumb {
+  @apply bg-gray-700;
+  border-radius: .25rem;
+}
+
+.mini-scrollbar::-webkit-scrollbar-thumb:hover {
+  @apply bg-gray-600;
 }
